# fttrainer

./: .gitignore  .ycm_extra_conf.py  CMakeLists.txt  DebugBook.ipynb  HOW-TO-BAM.md  Makefile  Optimal Grid Search.ipynb  README.md  SelectionGridSearch.ipynb  bdt-based-selection.ipynb  bdt_training.py  crossval_training.py  electron-training.ipynb  gridsearch_textable.py  kaon-training.ipynb  muon-training.ipynb  pandas-training-test.html  pandas-training-test.ipynb  plotting.ipynb  requirements.txt  selection-crosscheck-run2.ipynb  selection-crosscheck.ipynb  selection_gridsearch.py  tag.cxx  train.py  xgboost_training.py
configs/: 2017-run1-2011-opt-OSMuon.json  2017-run1-2012-opt-OSMuon.json  2017-run1-opt-OSKaon.json  2017-run2-opt-OSElectron-gbrt-optcuts.json  2017-run2-opt-OSElectron-minimalcuts.json  2017-run2-opt-OSElectron.json  2017-run2-opt-OSKaon-bestbdt.json  2017-run2-opt-OSKaon-minimalcuts.json  2017-run2-opt-OSKaon-optcuts.json  2017-run2-opt-OSKaon.json  2017-run2-opt-OSMuon-gbrt-optcuts-v2.json  2017-run2-opt-OSMuon-gp-optcuts-v2.json  2017-run2-opt-OSMuon-minimalcuts.json  2017-run2-opt-OSMuon-optcuts1.json  2017-run2-opt-OSMuon.json  2017-run2-opt-OSVtxCh.json  2017-run2-opt-muon.json  electron-run1.json  electron-run2.json  kaon-run1-noid.json  kaon-run1.json  kaon-run2-noid.json  kaon-run2.json  muon-run1-bdt.json  muon-run1.json  muon-run2-bdt.json  muon-run2.json
prototyping/: CMakeLists.txt  calibration.ipynb  electron-training.ipynb  kaon-training.ipynb  muon-calibration.ipynb  muon-training.ipynb
scripts/: calibration.py  data_preparation.py  metrics.py  models.py  utils.py
